--- a/views/ejs/sample2.ejs
+++ b/views/ejs/sample2.ejs
@@ -1,133 +1,229 @@
-<div class="sample-tutorial">
-    <div id="ss" class="sample-spreadsheets"></div>
-    <div class="sample-panel">
-        <div id="panel"></div>
+<div>
+    <div style="width: 50%;">
+        <div class="container-fluid">
+            <div id="chart"></div>
+        </div>
+        <div class="container-fluid">
+            <div id="theGrid">
+            </div>
+        </div>
+    </div>
+    <div style="width: 50%;">
+        <div class="container-fluid">
+            <div id="chart2"></div>
+        </div>
+        <div class="container-fluid">
+            <div id="theGrid2">
+            </div>
+        </div>
     </div>
 </div>
 
-<style>
-.sample-tutorial {
-    position: relative;
-    height: 100%;
-}
 
-.sample-spreadsheets {
-   width: calc(100% - 300px);
-   height: 100%;
-   overflow: hidden;
-   float: left;
+<style>
+@font-face {
+  font-family: 'S-CoreDream-3Light';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
-   position: absolute;
-   top: 0;
-   bottom: 0;
-   left: 0;
-   right: 0;
-   overflow: hidden;
+  margin: 20px;
+  font-family: 'S-CoreDream-3Light';
 }
 
-.sample-panel {
-   float: right;
-   width: 300px;
-   padding: 12px;
-   height: 100%;
-   box-sizing: border-box;
-   background: #fbfbfb;
-   overflow: auto;
+.wj-flexgrid {
+  max-height: 600px;
+  margin: 10px 0;
+}
+.wj-cell.wj-frozen-row {
+  border-bottom: none;
+}
+.negative {
+  color: red;
+}
+.wj-flexgrid .wj-header {
+  background-color: #0786BD;
+  color:white;
+  font-weight:bold;
 }
 
-.gc-panel {
-   padding: 10px;
-   background-color: rgb(230, 230, 230);
+.wj-cells .wj-cell.wj-state-selected{
+  background: #4DD0E1;
 }
 
-#panel {
-   position: absolute;
-   right: 0;
-   width: 300px;
-   height: 100%;
-   top: 0;
+
+body {
+  margin: 20px;
+  font-family: 'S-CoreDream-3Light';
+}
+.row {
+  margin: 10px -15px;
 }
 
-#app {
-   height: 100%;
+#pieAnimationMode {
+  width: 220px;
+}
+
+#pieEasing {
+  width: 220px;
+}
+
+#pieDuration, #pieInnerRadius {
+  width: 180px;
+}
+
+.btn{
+  background-image:none;
 }
 </style>
 
+<script src="https://cdn.grapecity.com/wijmo/5.20211.781/controls/wijmo.grid.selector.min.js" type="text/javascript"></script>
+<script src="https://cdn.grapecity.com/wijmo/5.20211.781/controls/wijmo.chart.min.js" type="text/javascript"></script>
+<script src="https://cdn.grapecity.com/wijmo/5.20211.781/controls/wijmo.chart.interaction.min.js" type="text/javascript"></script>
+<script src="https://cdn.grapecity.com/wijmo/5.20211.781/controls/wijmo.chart.animation.min.js" type="text/javascript"></script>
 <script>
-window.onload = function () {
-    var spread = new GC.Spread.Sheets.Workbook(_getElementById('ss'), { sheetCount: 2 });
-    initSpread(spread);
-    var pivotLayoutSheet = spread.getSheet(0);
-    initPivotTable(pivotLayoutSheet);
-};
-var aaa;
-function initSpread(spread) {
-    
-    $.ajax({
-        url: 'json/Sample2.json',
-        datatype: "json",
-        success: function (data) {
-            var spreadNS = GC.Spread.Sheets;
-            
-            var sheet = spread.getSheet(1);
-            sheet.setRowCount(data.length + 1);
-            spread.suspendPaint();
-            var table = sheet.tables.addFromDataSource("Table1", 0, 0, data, spreadNS.Tables.TableThemes.medium7);
-            table.showFooter(true);
-            table.showHeader(true);
-            table.highlightFirstColumn(true);
-            table.highlightLastColumn(false);
+document.readyState === 'complete' ? init() : window.onload = init;
+function init () {
+    initGrid();
+    initChart();
+}
+function initGrid() {
+  // 총계 표시를 위한 그룹 생성
+  var grandTotalsGroup = new wijmo.collections.PropertyGroupDescription('총합', function (item, propName) {
+    return '';
+  });
+  //
+  // 사용자 정의 집계를 가진 그리드
+  var theGrid = new wijmo.grid.FlexGrid('#theGrid', {
+    autoGenerateColumns: false,
+    allowDragging: false,
+    columns: [
+      { binding: 'c1', header: '지역', width: '*', isReadOnly: true },
+      { binding: 'c2', header: '직군', width: '*', isReadOnly: true },
+      { binding: 'c3', header: '성별', width: '*', isReadOnly: true },
+      { binding: 'c4', header: '인원', width: '*', isReadOnly: true, aggregate: 'Sum'}
+    ],
+    itemsSource: new wijmo.collections.CollectionView(_dataGrid1, {
+      groupDescriptions: [
+        grandTotalsGroup,
+        'c1',
+        'c2'
+      ]
+    })
+  });
+  //
+  // 축소 시작
+  theGrid.collapseGroupsToLevel(3);
 
-            spread.resumePaint();
-        },
-        error: function (ex) {
-            alert('Exception:' + ex);
-        }
+  let selector = new wijmo.grid.selector.Selector(theGrid, {
+    showCheckAll: false,
+    itemChecked: (e, a) => {
+        _flexPie.itemsSource = e._grid.selectedItems;
+    }
+  });
+}
+let _flexPie;
+function initChart() {
+    //
+    _flexPie = new wijmo.chart.FlexPie('#chart', {
+    header: '직군별 인원현황',
+    bindingName: 'c0',
+    binding: 'c4',
+    innerRadius: 0,
+    palette: getRandomPalette(),
+    itemsSource: _dataGrid1.filter(x => x.c1 == '서울'),
+    dataLabel: {
+      position: wijmo.chart.PieLabelPosition.Outside,
+      content: (ht) => {
+        return `${ht.name}`;
+      }
+    },
+    palette: [
+        '#f94144', '#f3722c', '#f8961e', '#f9c74f',
+        '#90be6d', '#43aa8b','#577590',
+        '#355070', '#5f0f40', 
+    ]
     });
-
-    initPivotTable(spread.getSheet(0), 'Table1');
-
-    //spread.suspendPaint();
-    //let sheet = spread.getSheet(1);
-    // sheet.name("DataSource");
-    // sheet.setRowCount(117);
-    // sheet.setColumnWidth(0, 120);
-    // sheet.getCell(-1, 0).formatter("YYYY-mm-DD");
-    // sheet.getRange(-1,4,0,2).formatter("$ #,##0");
-    // sheet.setArray(0, 0, pivotSales);
-    // let table = sheet.tables.add('tableSales', 0, 0, 117, 6);
-    // for(let i=2;i<=117;i++)
-    // {
-    //   sheet.setFormula(i-1,5,'=D'+i+'*E'+i)
-    // }
-    // table.style(GC.Spread.Sheets.Tables.TableThemes["none"]);
-    // let sheet0 = spread.getSheet(0);
-    // sheet0.name("PivotLayout");
-    // spread.resumePaint();
+    //
+    // 파이 애니메이션
+    let pieAnimation = new wijmo.chart.animation.ChartAnimation(_flexPie, {
+        animationMode: wijmo.chart.animation.AnimationMode.Point,
+        easing: wijmo.chart.animation.Easing.Swing,
+        duration: 400
+    });
 }
 
-function initPivotTable(sheet, tableName) {
-    sheet.name("Basic PivotTable");
-    sheet.setRowCount(1000);
-    let pivotTableOptions = {bandRows:true,bandColumns:true};
-    let pivotTable = sheet.pivotTables.add("PivotTable", tableName, 1, 1, GC.Spread.Pivot.PivotTableLayoutType.outline, GC.Spread.Pivot.PivotTableThemes.medium1, pivotTableOptions);
-    pivotTable.suspendLayout();
-    pivotTable.add("지역", "지역", GC.Spread.Pivot.PivotTableFieldType.rowField);
-    // pivotTable.add("car", "Cars", GC.Spread.Pivot.PivotTableFieldType.rowField);
-    // pivotTable.add("date", "Date", GC.Spread.Pivot.PivotTableFieldType.columnField);
-    // let groupInfo = { originFieldName: "date", dateGroups: [{ by: GC.Pivot.DateGroupType.quarters }] };
-    // pivotTable.group(groupInfo);
-    // pivotTable.add("total", "Totals", GC.Spread.Pivot.PivotTableFieldType.valueField, GC.Pivot.SubtotalType.sum);
-    // let style = new GC.Spread.Sheets.Style();
-    // style.formatter = "$ #,##0";
-    // pivotTable.setStyle({dataOnly: true}, style);
-    pivotTable.resumeLayout();
-    pivotTable.autoFitColumn();
+function getRandomPalette() {
+  let palettes = Object.getOwnPropertyNames(wijmo.chart.Palettes)
+  .filter(prop => typeof wijmo.chart.Palettes[prop] === 'object' && prop !== 'prototype');
+  let rand = Math.floor(Math.random() * palettes.length);
+  //
+  return wijmo.chart.Palettes[palettes[rand]];
 }
 
-function _getElementById(id) {
-    return document.getElementById(id);
+let _dataGrid1 = [
+    {c1:'서울', c2:'관리직', c3:'남', c4:Math.floor(Math.random() * 200 + 1)},
+    {c1:'서울', c2:'관리직', c3:'여', c4:Math.floor(Math.random() * 200 + 1)},
+
+    {c1:'서울', c2:'생산직(일급)', c3:'남', c4:Math.floor(Math.random() * 200 + 1)},
+    {c1:'서울', c2:'생산직(일급)', c3:'여', c4:Math.floor(Math.random() * 200 + 1)},
+
+    {c1:'서울', c2:'생산직(월급)', c3:'남', c4:Math.floor(Math.random() * 200 + 1)},
+    {c1:'서울', c2:'생산직(월급)', c3:'여', c4:Math.floor(Math.random() * 200 + 1)},
+
+    {c1:'경기', c2:'관리직', c3:'남', c4:Math.floor(Math.random() * 200 + 1)},
+    {c1:'경기', c2:'관리직', c3:'여', c4:Math.floor(Math.random() * 200 + 1)},
+
+    {c1:'경기', c2:'생산직(일급)', c3:'남', c4:Math.floor(Math.random() * 200 + 1)},
+    {c1:'경기', c2:'생산직(일급)', c3:'여', c4:Math.floor(Math.random() * 200 + 1)},
+
+    {c1:'경기', c2:'생산직(월급)', c3:'남', c4:Math.floor(Math.random() * 200 + 1)},
+    {c1:'경기', c2:'생산직(월급)', c3:'여', c4:Math.floor(Math.random() * 200 + 1)},
+
+    {c1:'강원', c2:'관리직', c3:'남', c4:Math.floor(Math.random() * 200 + 1)},
+    {c1:'강원', c2:'관리직', c3:'여', c4:Math.floor(Math.random() * 200 + 1)},
+
+    {c1:'강원', c2:'생산직(일급)', c3:'남', c4:Math.floor(Math.random() * 200 + 1)},
+    {c1:'강원', c2:'생산직(일급)', c3:'여', c4:Math.floor(Math.random() * 200 + 1)},
+
+    {c1:'강원', c2:'생산직(월급)', c3:'남', c4:Math.floor(Math.random() * 200 + 1)},
+    {c1:'강원', c2:'생산직(월급)', c3:'여', c4:Math.floor(Math.random() * 200 + 1)},
+];
+_dataGrid1 = _dataGrid1.map(x => {
+    return {
+        ...x,
+        c0: `${x.c1}/${x.c2}/${x.c3}` 
+    }
+})
+
+////////////////////
+
+//데이터
+function getData() {
+  let data = new wijmo.collections.ObservableArray();
+  //
+  for (let i = 0; i < 5; i++) {
+    console.log(getRandomData('random' + getRandomValue(1000)));
+    data.push(getRandomData('random' + getRandomValue(1000)));
+  }
+  //
+  return data;
+}
+//
+function getRandomData(id) {
+  return {
+    id: id,
+    y0: getRandomValue(200),
+    y1: getRandomValue(400),
+    y2: getRandomValue(600),
+    y3: getRandomValue(800),
+    y4: getRandomValue(1000)
+  };
+}
+//
+function getRandomValue(max) {
+  return Math.round(Math.random() * max);
 }
 </script>
