--- a/views/ejs/layout.ejs
+++ b/views/ejs/layout.ejs
@@ -5,6 +5,7 @@
 <head>
     <title>Express EJS template</title>
     <link rel="stylesheet" type="text/css" href="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets/styles/gc.spread.sheets.excel2013white.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.grapecity.com/wijmo/5.20211.781/styles/wijmo.min.css">
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets/dist/gc.spread.sheets.all.min.js" type="text/javascript"></script>
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-shapes/dist/gc.spread.sheets.shapes.min.js" type="text/javascript"></script>
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-pivot-addon/dist/gc.spread.pivot.pivottables.min.js" type="text/javascript"></script>
@@ -12,6 +13,8 @@
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-tablesheet/dist/gc.spread.sheets.tablesheet.min.js" type="text/javascript"></script>
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-resources-ko/dist/gc.spread.sheets.resources.ko.min.js" type="text/javascript"></script>
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/spread/source/js/license.js" type="text/javascript"></script>
+    <script src="https://cdn.grapecity.com/wijmo/5.20211.781/controls/wijmo.min.js" type="text/javascript"></script>
+    <script src="https://cdn.grapecity.com/wijmo/5.20211.781/controls/wijmo.grid.min.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js" type="text/javascript"></script>
 </head>
 <body class="container">
