[시공시케줄 완료]

--- a/views/ejs/sample4.ejs
+++ b/views/ejs/sample4.ejs
@@ -21,27 +21,35 @@ window.onload = function() {
     
     spread.suspendPaint();
 	initSpread(spread);
+    spread.resumePaint();
+
+    var spread = GC.Spread.Sheets.findControl(document.getElementById('ss'));
+    spread.options.showVerticalScrollbar = false;
+    spread.options.showHorizontalScrollbar = false;
 };
 
 function initSpread(spread) {
-
     fetch('json/Sample4.ssjson')
     .then(response => {
-      return response.json();
+        return response.json();
     })
     .then(jsondata => {
         spread.fromJSON(jsondata);
+        return;
+    })
+    .then(x => {
+        var spread = GC.Spread.Sheets.findControl(document.getElementById('ss'));
         spread.options.showVerticalScrollbar = false;
         spread.options.showHorizontalScrollbar = false;
-        var sheet = spread.getSheet(0);
-        sheet.options.gridline.showHorizontalGridline = false;
-        sheet.options.gridline.showVerticalGridline = false;
+        spread.options.backColor = "#e6e6e6";
+        spread.options.grayAreaBackColor = "#e6e6e6";
+        var sheet = spread.getSheetFromName('Sheet1');
         sheet.options.rowHeaderVisible = false;
         sheet.options.colHeaderVisible = false;
-        spread.resumePaint();
+        sheet.options.selectionBorderColor = "transparent";
+        sheet.scroll(-1000, 0);
+        return;
     });
-
-    
 }
 
 </script>
