--- a/views/ejs/left.ejs
+++ b/views/ejs/left.ejs
@@ -3,22 +3,27 @@
         <li>
             <a href="#" class="depth1 on"><span>BMS</span></a>
             <ul class="depth2_div">
-                <li><a href="/sample1?depth1=BMS&depth2=표준원가" class="depth2 <%= depth1 == 'BMS' && depth2 == '표준원가' ? 'on' : '' %>"><span>표준원가</span></a></li>
+                <li><a href="/sample?depth1=BMS&depth2=표준원가&sampleId=1" class="depth2 <%= depth1 == 'BMS' && depth2 == '표준원가' ? 'on' : '' %>"><span>표준원가</span></a></li>
                 
-                <li><a href="/sample2?depth1=BMS&depth2=인원현황" class="depth2 <%= depth1 == 'BMS' && depth2 == '인원현황' ? 'on' : '' %>"><span>인원현황</span></a></li>
-                <li><a href="/sample4?depth1=BMS&depth2=대시보드" class="depth2 <%= depth1 == 'BMS' && depth2 == '대시보드' ? 'on' : '' %>"><span>대시보드</span></a></li>
+                <li><a href="/sample?depth1=BMS&depth2=인원현황&sampleId=2" class="depth2 <%= depth1 == 'BMS' && depth2 == '인원현황' ? 'on' : '' %>"><span>인원현황</span></a></li>
+                <li><a href="/sample?depth1=BMS&depth2=대시보드&sampleId=4" class="depth2 <%= depth1 == 'BMS' && depth2 == '대시보드' ? 'on' : '' %>"><span>대시보드</span></a></li>
             </ul>
         </li>
         <li>
             <a href="#" class="depth1 on"><span>HRM</span></a>
             <ul class="depth2_div">
-                <li><a href="/sample3?depth1=HRM&depth2=인사평가 진행 현황" class="depth2 <%= depth1 == 'HRM' && depth2 == '인사평가 진행 현황' ? 'on' : '' %>""><span>인사평가 진행 현황</span></a></li>
+                <li><a href="/sample?depth1=HRM&depth2=인사평가 진행 현황&sampleId=3" class="depth2 <%= depth1 == 'HRM' && depth2 == '인사평가 진행 현황' ? 'on' : '' %>"><span>인사평가 진행 현황</span></a></li>
             </ul>
         </li>
         <li>
             <a href="#" class="depth1 on"><span>OMS</span></a>
             <ul class="depth2_div">
-                <li><a href="/sample5?depth1=OMS&depth2=시공 스케줄" class="depth2 <%= depth1 == 'OMS' && depth2 == '시공 스케줄' ? 'on' : '' %>""><span>시공 스케줄</span></a></li>
+                <li><a href="/sample?depth1=OMS&depth2=시공 스케줄&sampleId=5" class="depth2 <%= depth1 == 'OMS' && depth2 == '시공 스케줄' ? 'on' : '' %>"><span>시공 스케줄</span></a></li>
+                <li><a href="/sample?depth1=OMS&depth2=대리점/제휴점관리&sampleId=6" class="depth2 <%= depth1 == 'OMS' && depth2 == '대리점/제휴점관리' ? 'on' : '' %>"><span>대리점/제휴점관리</span></a></li>
+                <li><a href="/sample?depth1=OMS&depth2=대리점/제휴점상세&sampleId=7" class="depth2 <%= depth1 == 'OMS' && depth2 == '대리점/제휴점상세' ? 'on' : '' %>"><span>대리점/제휴점상세</span></a></li>
+                <li><a href="/sample?depth1=OMS&depth2=대리점별매출실적&sampleId=8" class="depth2 <%= depth1 == 'OMS' && depth2 == '대리점별매출실적' ? 'on' : '' %>"><span>대리점별매출실적</span></a></li>
+                <li><a href="/sample?depth1=OMS&depth2=장려금/수당관리&sampleId=9" class="depth2 <%= depth1 == 'OMS' && depth2 == '장려금/수당관리' ? 'on' : '' %>"><span>장려금/수당관리</span></a></li>
+                <li><a href="/sample?depth1=OMS&depth2=주간일보관리&sampleId=10" class="depth2 <%= depth1 == 'OMS' && depth2 == '주간일보관리' ? 'on' : '' %>"><span>주간일보관리</span></a></li>
             </ul>
         </li>
     </ul>
