[Sample15까지 완료]

--- a/views/ejs/left.ejs
+++ b/views/ejs/left.ejs
@@ -1,7 +1,7 @@
 <div class="left_nav_wrap">
     <ul class="left_nav">
         <li>
-            <a href="#" class="depth1 on"><span>BMS</span></a>
+            <a href="#" class="depth1" id="BMS"><span>BMS</span></a>
             <ul class="depth2_div">
                 <li><a href="/sample?depth1=BMS&depth2=표준원가&sampleId=1" class="depth2 <%= depth1 == 'BMS' && depth2 == '표준원가' ? 'on' : '' %>"><span>표준원가</span></a></li>
                 
@@ -10,13 +10,13 @@
             </ul>
         </li>
         <li>
-            <a href="#" class="depth1 on"><span>HRM</span></a>
+            <a href="#" class="depth1" id="HRM"><span>HRM</span></a>
             <ul class="depth2_div">
                 <li><a href="/sample?depth1=HRM&depth2=인사평가 진행 현황&sampleId=3" class="depth2 <%= depth1 == 'HRM' && depth2 == '인사평가 진행 현황' ? 'on' : '' %>"><span>인사평가 진행 현황</span></a></li>
             </ul>
         </li>
         <li>
-            <a href="#" class="depth1 on"><span>OMS</span></a>
+            <a href="#" class="depth1" id="OMS"><span>OMS</span></a>
             <ul class="depth2_div">
                 <li><a href="/sample?depth1=OMS&depth2=시공 스케줄&sampleId=5" class="depth2 <%= depth1 == 'OMS' && depth2 == '시공 스케줄' ? 'on' : '' %>"><span>시공 스케줄</span></a></li>
                 <li><a href="/sample?depth1=OMS&depth2=대리점/제휴점관리&sampleId=6" class="depth2 <%= depth1 == 'OMS' && depth2 == '대리점/제휴점관리' ? 'on' : '' %>"><span>대리점/제휴점관리</span></a></li>
@@ -24,6 +24,7 @@
                 <li><a href="/sample?depth1=OMS&depth2=대리점별매출실적&sampleId=8" class="depth2 <%= depth1 == 'OMS' && depth2 == '대리점별매출실적' ? 'on' : '' %>"><span>대리점별매출실적</span></a></li>
                 <li><a href="/sample?depth1=OMS&depth2=장려금/수당관리&sampleId=9" class="depth2 <%= depth1 == 'OMS' && depth2 == '장려금/수당관리' ? 'on' : '' %>"><span>장려금/수당관리</span></a></li>
                 <li><a href="/sample?depth1=OMS&depth2=주간일보관리&sampleId=10" class="depth2 <%= depth1 == 'OMS' && depth2 == '주간일보관리' ? 'on' : '' %>"><span>주간일보관리</span></a></li>
+                <li><a href="/sample?depth1=OMS&depth2=출고요청서&sampleId=11" class="depth2 <%= depth1 == 'OMS' && depth2 == '출고요청서' ? 'on' : '' %>"><span>출고요청서</span></a></li>
             </ul>
         </li>
     </ul>
