--- a/views/ejs/sample2.ejs
+++ b/views/ejs/sample2.ejs
@@ -19,7 +19,7 @@
   color: red;
 }
 .wj-flexgrid .wj-header {
-  background-color: #0786BD;
+  background-color: #36495e;
   color:white;
   font-weight:bold;
 }
