--- a/views/ejs/layout.ejs
+++ b/views/ejs/layout.ejs
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Express EJS template</title>
+    <title>WINGO</title>
     <link rel="stylesheet" type="text/css" href="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets/styles/gc.spread.sheets.excel2013white.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.grapecity.com/wijmo/5.20211.781/styles/wijmo.min.css">
     <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets/dist/gc.spread.sheets.all.min.js" type="text/javascript"></script>
