--- a/views/ejs/left.ejs
+++ b/views/ejs/left.ejs
@@ -25,6 +25,7 @@
                 <li><a href="/sample?depth1=OMS&depth2=장려금/수당관리&sampleId=9" class="depth2 <%= depth1 == 'OMS' && depth2 == '장려금/수당관리' ? 'on' : '' %>"><span>장려금/수당관리</span></a></li>
                 <li><a href="/sample?depth1=OMS&depth2=주간일보관리&sampleId=10" class="depth2 <%= depth1 == 'OMS' && depth2 == '주간일보관리' ? 'on' : '' %>"><span>주간일보관리</span></a></li>
                 <li><a href="/sample?depth1=OMS&depth2=출고요청서&sampleId=11" class="depth2 <%= depth1 == 'OMS' && depth2 == '출고요청서' ? 'on' : '' %>"><span>출고요청서</span></a></li>
+                <li><a href="/sample?depth1=OMS&depth2=품목위치정보관리&sampleId=20" class="depth2 <%= depth1 == 'OMS' && depth2 == '품목위치정보관리' ? 'on' : '' %>"><span>품목위치정보관리</span></a></li>
             </ul>
         </li>
     </ul>
