--- a/views/ejs/sample11.ejs
+++ b/views/ejs/sample11.ejs
@@ -1,9 +1,15 @@
 <div class="content_top">
     <div class="cont_tit">출고요청서</div>
     <div class="div">
+        <button id="btnChart" class="btn_search">
+            <span>물류현황</span>
+        </button>
+        <button id="btnSample19" class="btn_search">
+            <span>출고집계현황</span>
+        </button>
         <button class="btn_search">
-        <i class="ico_srch"></i>
-        <span>search</span>
+            <i class="ico_srch"></i>
+            <span>search</span>
         </button>
     </div>
 </div>
@@ -23,11 +29,11 @@
             <th>기준일자</th>
             <td class="ipt_date_wrap">
                 <div class="ipt_date_div">
-                    <input type="text" class="ipt_date datepicker">
+                    <input type="text" class="ipt_date datepicker" value="2023-12-13">
                 </div>
                 <span class="line">-</span>
                 <div class="ipt_date_div">
-                    <input type="text" class="ipt_date datepicker">
+                    <input type="text" class="ipt_date datepicker" value="2023-12-15">
                 </div>
             </td>
             <th>수주/주문번호</th>
@@ -67,9 +73,12 @@ window.onload = function() {
 	initSpread(spread);
     spread.resumePaint();
 
-    var spread = GC.Spread.Sheets.findControl(document.getElementById('ss'));
-    //spread.options.showVerticalScrollbar = false;
-    //spread.options.showHorizontalScrollbar = false;
+    $('#btnChart').on('click', function(e){
+        location.href = '/sample?depth1=OMS&depth2=출고요청서&sampleId=16';
+    });
+    $('#btnSample19').on('click', function(e){
+        location.href = '/sample?depth1=OMS&depth2=출고요청서&sampleId=19';
+    });
 };
 
 function initSpread(spread) {
@@ -95,13 +104,10 @@ function initSpread(spread) {
         spread.options.scrollPixel = 36.2;
         sheet.scroll(-1000, 0);
 
-        // 데이터 보정
-        sheet.setValue(0, 8, '배송내역서');
-        sheet.setValue(1, 8, '배송상차관리');
-
         sheet.setColumnWidth(3, "*");
         sheet.setColumnWidth(4, "*");
         sheet.frozenRowCount(4);
+        sheet.getRange(0, 0, 4, 10).backColor('#36495e');
 
         
         var data = getData();
@@ -150,14 +156,13 @@ function initSpread(spread) {
         sheet.setValue(startRow, 5, data.c6);       // 영업담당자
         sheet.setValue(startRow, 6, data.c7);       // 출고제목
         sheet.setValue(startRow, 7, data.c8);       // 출고 메모
-        sheet.setCellType(startRow, 8, new GC.Spread.Sheets.CellTypes.Button().text("배송내역서"), GC.Spread.Sheets.SheetArea.viewport);     // 배송내역서
+        sheet.setValue(startRow, 8, data.c19);      // 상위주문번호
+        
 
         sheet.setValue(startRow + 1, 3, data.c9);   // 출고 준비일
         sheet.setValue(startRow + 1, 4, data.c10);    // 공급가액
         sheet.setValue(startRow + 1, 5, data.c11);      // 배송비
         sheet.setValue(startRow + 1, 6, data.c12);  // 고객명 | 연락처 | 고객주소
-        sheet.setCellType(startRow + 1, 8, new GC.Spread.Sheets.CellTypes.Button().text("배송상차관리"), GC.Spread.Sheets.SheetArea.viewport);     // 배송상차관리
-        sheet.setCellType(startRow + 1, 9, new GC.Spread.Sheets.CellTypes.Button().text("상세"), GC.Spread.Sheets.SheetArea.viewport);     // 상세
 
         sheet.setValue(startRow + 2, 1, data.c13);           // 품목
 
@@ -177,7 +182,8 @@ function initSpread(spread) {
         sheet.setCellType(startRow + 2, 6, checkBoxList, GC.Spread.Sheets.SheetArea.viewport);          // 긴급/왕복/세대반입여부/반입비
         sheet.setValue(startRow + 2, 6, data.c17);       
         sheet.setValue(startRow + 2, 7, data.c18);       
-        sheet.setValue(startRow + 2, 8, data.c19);                    // 상위주문번호
+        sheet.setCellType(startRow + 2, 8, new GC.Spread.Sheets.CellTypes.Button().text("배송상차관리"), GC.Spread.Sheets.SheetArea.viewport);     // 배송상차관리
+        sheet.setCellType(startRow + 2, 9, new GC.Spread.Sheets.CellTypes.Button().text("배송내역서"), GC.Spread.Sheets.SheetArea.viewport);     // 배송내역서
                      
         combo.items([{ text: "배송업체 미배정", value: "0" }, { text: "CJ 택배", value: "1" }, { text: "로젠 택배", value: "2" }, { text: "대한 통운", value: "3" }])
             .editorValueType(spreadNS.CellTypes.EditorValueType.text);
@@ -187,18 +193,18 @@ function initSpread(spread) {
             .editorValueType(spreadNS.CellTypes.EditorValueType.text);
         sheet.getCell(startRow + 3, 5, spreadNS.SheetArea.viewport).cellType(combo).value(data.c22);      // 운임여부
         sheet.setValue(startRow + 3, 6, data.c23);                        // 물류메모
-        sheet.setCellType(startRow + 3, 8, new GC.Spread.Sheets.CellTypes.Button().text("이력조회"), GC.Spread.Sheets.SheetArea.viewport);     // 이력조회
+        sheet.setCellType(startRow + 3, 8, new GC.Spread.Sheets.CellTypes.Button().text("상세"), GC.Spread.Sheets.SheetArea.viewport);     // 이력조회
         sheet.setCellType(startRow + 3, 9, new GC.Spread.Sheets.CellTypes.Button().text("저장"), GC.Spread.Sheets.SheetArea.viewport);         // 저장
 
         // 병합
         sheet.addSpan(startRow, 0, 4, 1);      // 수주번호
         sheet.addSpan(startRow, 1, 2, 1);      // 주문번호
         sheet.addSpan(startRow, 2, 2, 1);      // 출고번호
-        sheet.addSpan(startRow, 8, 1, 2);      // 배송내역서
+        sheet.addSpan(startRow, 8, 2, 2);      // 상위주문번호
         sheet.addSpan(startRow + 2, 1, 2, 2);      // 품목
         sheet.addSpan(startRow + 1, 6, 1, 2);      // 고객명 | 연락처 | 고객주소
         sheet.addSpan(startRow + 3, 6, 1, 2);      // 물류메모
-        sheet.addSpan(startRow + 2, 8, 1, 2);      // 상위주문번호
+        
 
         // 스타일
         var lineStyle = GC.Spread.Sheets.LineStyle.thin;
@@ -217,7 +223,7 @@ function initSpread(spread) {
 function getData() {
   let arr = [];
 
-  for(var i = 1; i < 10; i++) {
+  for(var i = 1; i < 16; i++) {
     var date = getRandomArrayElement(['2023-12-05', '2023-12-07', '2023-12-09', '2023-12-10', '2023-12-20', '2023-12-23']);
     var order = getRandomArrayElement([['출고 대기', '배송업체 미배정'], ['배송업체 미배정', '배송업체 미배정'], ['출고 진행중', getRandomArrayElement(["CJ 택배", "로젠 택배", "대한 통운"])], ['출고 완료', getRandomArrayElement(["CJ 택배", "로젠 택배", "대한 통운"])]]);
     var obj = {};
