--- a/views/ejs/sample13.ejs
+++ b/views/ejs/sample13.ejs
@@ -115,6 +115,7 @@ function initSpread(spread) {
 
     //init a table sheet
     sheet = spread.addSheetTab(0, "TableSheet1", GC.Spread.Sheets.SheetType.tableSheet);
+    sheet.applyTableTheme(GC.Spread.Sheets.Tables.TableThemes.professional4);
     sheet.options.allowAddNew = false; //hide new row
     sheet.setDefaultRowHeight(40, GC.Spread.Sheets.SheetArea.colHeader);
 
