--- a/views/ejs/sample14.ejs
+++ b/views/ejs/sample14.ejs
@@ -1,9 +1,12 @@
 <div class="content_top">
     <div class="cont_tit">배송상차관리</div>
     <div class="div">
+        <button id="btnGrid" class="btn_search">
+            <span>출고요청서</span>
+        </button>
         <button class="btn_search">
-        <i class="ico_srch"></i>
-        <span>search</span>
+            <i class="ico_srch"></i>
+            <span>search</span>
         </button>
     </div>
 </div>
@@ -48,13 +51,44 @@
         <div id="ss" style="width:100%;height:100%"></div>
     </div>
 </div>
-<div id="modal" class="modal" style="height: 500px; width: 500px;">
+<div id="modal1" class="modal" style="height: 500px; width: 500px;">
     <div class="sample-tutorial" style="height:93%;">
         <div id="ss2" style="width:100%;height:100%"></div>
     </div>
     <div class="div" style="display: flex;justify-content: center;">
         <button id="save" class="btn_search">
             <span>엑셀 다운로드</span>
+        </button>
+        <button class="btn_search">
+            <a href="#" rel="modal:close"><span>닫기</span></a>
+        </button>
+    </div>
+</div>
+
+<div id="modal2" class="modal" style="height: 700px; width: 1000px; max-width: 1000px;">
+    <div class="sample-tutorial" style="height:93%;">
+        <div id="ss3" style="width:100%;height:100%"></div>
+    </div>
+    <div class="div" style="display: flex;justify-content: center;">
+        <button id="save2" class="btn_search">
+            <span>엑셀 다운로드</span>
+        </button>
+        <button class="btn_search">
+            <a href="#" rel="modal:close"><span>닫기</span></a>
+        </button>
+    </div>
+</div>
+
+<div id="modal3" class="modal" style="height: 700px; width: 1000px; max-width: 1000px;">
+    <div class="sample-tutorial" style="height:93%;">
+        <div id="ss4" style="width:100%;height:100%"></div>
+    </div>
+    <div class="div" style="display: flex;justify-content: center;">
+        <button id="save3" class="btn_search">
+            <span>엑셀 다운로드</span>
+        </button>
+        <button class="btn_search">
+            <a href="#" rel="modal:close"><span>닫기</span></a>
         </button>
     </div>
 </div>
@@ -77,6 +111,10 @@
 <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-io/dist/gc.spread.sheets.io.min.js" type="text/javascript"></script>
 <script>
 window.onload = function() {
+    $('#btnGrid').on('click', function(e){
+        location.href = '/sample?depth1=OMS&depth2=출고요청서&sampleId=11';
+    });
+
 	var spread = new GC.Spread.Sheets.Workbook(document.getElementById('ss'), {
 		sheetCount: 2,
 	});
@@ -88,6 +126,46 @@ window.onload = function() {
     document.getElementById('save').onclick = function () {
         var spread = GC.Spread.Sheets.findControl(document.getElementById('ss2'));
         var fileName = '배송오더_DL2262608796.xlsx';
+        var fileType = 'xlsx';
+        var options = {
+            "includeBindingSource": false,
+            "includeStyles": true,
+            "includeFormulas": true,
+            "saveAsView": false,
+            "rowHeadersAsFrozenColumns": false,
+            "columnHeadersAsFrozenRows": false,
+            "includeAutoMergedCells": false,
+            "includeCalcModelCache": false,
+            "includeUnusedNames": true,
+            "includeEmptyRegionCells": true,
+            "fileType": 0
+        }
+
+        spread.export(function(blob) { saveAs(blob, fileName); }, function() {}, options);
+    };
+    document.getElementById('save2').onclick = function () {
+        var spread = GC.Spread.Sheets.findControl(document.getElementById('ss3'));
+        var fileName = '배송요청서_DC85120015611.xlsx';
+        var fileType = 'xlsx';
+        var options = {
+            "includeBindingSource": false,
+            "includeStyles": true,
+            "includeFormulas": true,
+            "saveAsView": false,
+            "rowHeadersAsFrozenColumns": false,
+            "columnHeadersAsFrozenRows": false,
+            "includeAutoMergedCells": false,
+            "includeCalcModelCache": false,
+            "includeUnusedNames": true,
+            "includeEmptyRegionCells": true,
+            "fileType": 0
+        }
+
+        spread.export(function(blob) { saveAs(blob, fileName); }, function() {}, options);
+    };
+    document.getElementById('save3').onclick = function () {
+        var spread = GC.Spread.Sheets.findControl(document.getElementById('ss4'));
+        var fileName = '피킹리스트_OD85120015611.xlsx';
         var fileType = 'xlsx';
         var options = {
             "includeBindingSource": false,
@@ -137,9 +215,11 @@ function initSpread(spread) {
 
         // 데이터 보정
         sheet.setValue(0, 7, '배송오더');
+        
 
         sheet.setColumnWidth(4, "*");
         sheet.frozenRowCount(2);
+        sheet.getRange(0, 0, 2, 9).backColor('#36495e');
 
         
         var data = getData();
@@ -158,7 +238,11 @@ function initSpread(spread) {
                         }
                         break;
                     case '배송오더':
-                        $("#modal").modal({});
+                        $("#modal1").modal({
+                            escapeClose: false,
+                            clickClose: false,
+                            showClose: false
+                        });
                         var spread = new GC.Spread.Sheets.Workbook(document.getElementById('ss2'));
                         var sheetModal = spread.getSheetFromName('Sheet1');
                         var SheetArea = GC.Spread.Sheets.SheetArea;
@@ -171,7 +255,7 @@ function initSpread(spread) {
                         sheetModal.options.selectionBorderColor = "transparent";
                         sheetModal.setRowCount(7, SheetArea.viewport);
                         sheetModal.setColumnCount(2, SheetArea.viewport);
-                        sheetModal.setText(0, 0, sheet.getCell(row, 0).value());
+                        sheetModal.getCell(0, 0).text(sheet.getCell(row, 0).value()).font('bold normal 24px normal');
                         sheetModal.setText(1, 0, '배송업체');
                         sheetModal.setText(2, 0, "도착시간");
                         sheetModal.setText(3, 0, '파렛트 수량');
@@ -190,7 +274,7 @@ function initSpread(spread) {
                         sheetModal.getRange(-1, -1, 7, 2).setBorder(lineBorder, { all: true });
                         sheetModal.getRange(0, 0, 7, 2).vAlign(GC.Spread.Sheets.VerticalAlign.center);
                         sheetModal.getRange(0, 0, 7, 2).hAlign(GC.Spread.Sheets.HorizontalAlign.center);
-                        sheetModal.getRange(0, 0, 5, 1).backColor('#4673a1');
+                        sheetModal.getRange(0, 0, 5, 1).backColor('#36495e');
                         sheetModal.getRange(0, 0, 5, 1).foreColor('#FFFFFF');
                         sheetModal.setRowHeight(0, 90.0, SheetArea.viewport);
                         for(var i = 1; i < 7; i++) {
@@ -202,7 +286,144 @@ function initSpread(spread) {
                         sheetModal.addSpan(5, 0, 1, 2);
                         sheetModal.addSpan(6, 0, 1, 2);
                         break;
+                    case '배송요청서':
+                        $("#modal2").modal({
+                            escapeClose: false,
+                            clickClose: false,
+                            showClose: false
+                        });
+                        var spread = new GC.Spread.Sheets.Workbook(document.getElementById('ss3'));
+                        
+                        
+                        fetch('json/Sample17.ssjson')
+                        .then(response => {
+                            return response.json();
+                        })
+                        .then(jsondata => {
+                            spread.fromJSON(jsondata);
+                            return;
+                        })
+                        .then(x => {
+                            var sheetModal = spread.getSheetFromName('Sheet1');
+                            var SheetArea = GC.Spread.Sheets.SheetArea;
+                            var spreadNS = GC.Spread.Sheets;
+                            spread.options.showVerticalScrollbar = false;
+                            spread.options.showHorizontalScrollbar = false;
+                            spread.options.scrollByPixel = true;
+                            sheetModal.options.rowHeaderVisible = false;
+                            sheetModal.options.colHeaderVisible = false;
+                            sheetModal.options.selectionBorderColor = "transparent";
+                            sheetModal.setColumnWidth(5, "*");
+                            sheetModal.setColumnWidth(6, "*");
+
+                            sheetModal.getCell(0, 4).text('12/01상차, 12/02하차').font('bold normal 18px normal');
+                            sheetModal.setText(2, 0, '1');
+                            sheetModal.setText(2, 1, 'DC85120015611');
+                            sheetModal.setText(2, 2, '11시 30분');
+                            sheetModal.setText(2, 3, '06시 30분');
+                            sheetModal.setText(2, 4, '[15165]서울 영등포구 여의나루로 32');
+                            
+                            sheetModal.setText(4, 0, '[법인] 51-4523');
+                            sheetModal.setText(4, 1, 'Y');
+                            sheetModal.setText(4, 2, 'Y');
+                            sheetModal.setText(4, 4, '50,000원');
+
+                            sheetModal.setText(6, 1, '강화유리 2500 (2500*2000) 파티션용');
+                            sheetModal.setText(6, 5, '1');
+                            sheetModal.setText(7, 1, '강화유리 2500 (2500*2000) 파티션용');
+                            sheetModal.setText(7, 5, '1');
+                            sheetModal.setText(8, 1, '강화유리 2500 (2500*2000) 파티션용');
+                            sheetModal.setText(8, 5, '1');
+
+                            sheetModal.getRange(6, 1, 3, 5).backColor('#fff9c4');
+
+                            sheetModal.setText(10, 1, '사이드판 1000 (1000*2000) 천장재');
+                            sheetModal.setText(10, 5, '1');
+                            sheetModal.setText(11, 1, '사이드판 1000 (1000*2000) 천장재');
+                            sheetModal.setText(11, 5, '1');
+                            sheetModal.setText(12, 1, '사이드판 1000 (1000*2000) 천장재');
+                            sheetModal.setText(12, 5, '1');
+
+                            sheetModal.getRange(10, 1, 3, 5).backColor('#fff9c4');
+
+                            sheetModal.setText(14, 1, '중앙판 1000 (1350*1750) 천장재');
+                            sheetModal.setText(14, 5, '1');
+                            sheetModal.setText(15, 1, '중앙판 1000 (1350*1750) 천장재');
+                            sheetModal.setText(15, 5, '1');
+
+                            sheetModal.getRange(14, 1, 2, 5).backColor('#fff9c4');
+
+                            sheetModal.setText(18, 1, '욕조 700 (900*250) SDF-122');
+                            sheetModal.setText(18, 5, '1');
+
+                            sheetModal.getRange(18, 1, 1, 5).backColor('#fff9c4');
+
+                            sheetModal.setText(22, 1, '고객 연락 후, 배송이 진행되어야합니다. 다른 특이사항은 없고 시간 엄수 부탁드립니다.');
+                        });
+                        break;
+                    case '피킹리스트':
+                    $("#modal3").modal({
+                        escapeClose: false,
+                        clickClose: false,
+                        showClose: false
+                    });
+                    var spread = new GC.Spread.Sheets.Workbook(document.getElementById('ss4'));
+                    
+                    
+                    fetch('json/Sample18.ssjson')
+                    .then(response => {
+                        return response.json();
+                    })
+                    .then(jsondata => {
+                        spread.fromJSON(jsondata);
+                        return;
+                    })
+                    .then(x => {
+                        var sheetModal = spread.getSheetFromName('Sheet1');
+                        var SheetArea = GC.Spread.Sheets.SheetArea;
+                        var spreadNS = GC.Spread.Sheets;
+                        spread.options.showVerticalScrollbar = false;
+                        spread.options.showHorizontalScrollbar = false;
+                        spread.options.scrollByPixel = true;
+                        sheetModal.options.rowHeaderVisible = false;
+                        sheetModal.options.colHeaderVisible = false;
+                        sheetModal.options.selectionBorderColor = "transparent";
+                        sheetModal.setColumnWidth(5, "*");
+                        sheetModal.frozenRowCount(4);
+
+                        var data = getData2();
+                        var startCell = 4;
+                        var endCell = 4;
+                        var sum = 0;
+                        data.forEach(x => {
+                            sheetModal.addRows(sheetModal.getRowCount(SheetArea.viewport), 1);
+                            sheetModal.setText(endCell, 0, x.c1 + '');
+                            sheetModal.setText(endCell, 1, x.c2);
+                            sheetModal.setText(endCell, 2, x.c3);
+                            sheetModal.setText(endCell, 3, x.c4);
+                            sheetModal.setValue(endCell, 4, x.c5 );
+                            sheetModal.setText(endCell, 5, x.c6);
+                            endCell += 1;
+                            sum += x.c5;
+                        });
+
+                        sheetModal.addRows(sheetModal.getRowCount(SheetArea.viewport), 1);
+                        sheetModal.getCell(endCell, 0).text('총합').font('bold normal 14px normal');
+                        sheetModal.getCell(endCell, 4).text(sum + '').font('bold normal 14px normal');
+                        sheetModal.addSpan(endCell, 1, 1, 3);
+                        sheetModal.getRange(endCell, 0, 1, 6).backColor('#fff9c4');
+                        endCell += 1;
+
+                        
+
+                        var lineStyle = GC.Spread.Sheets.LineStyle.thin;
+                        var lineBorder = new GC.Spread.Sheets.LineBorder('black', lineStyle);
+                        sheetModal.getRange(3, 0, endCell, 6).setBorder(lineBorder, { all: true });
+                        
+                    });
+                    break;
                 }
+                
             }
         });
         return ;
@@ -225,6 +446,7 @@ function initSpread(spread) {
         sheet.setValue(startRow, 5, data.c6);       // 고객명
         sheet.setValue(startRow, 6, data.c7);       // 고객주소
         sheet.setCellType(startRow, 7, new GC.Spread.Sheets.CellTypes.Button().text("배송오더"), GC.Spread.Sheets.SheetArea.viewport);     // 배송오더
+        sheet.setCellType(startRow, 8, new GC.Spread.Sheets.CellTypes.Button().text("배송요청서"), GC.Spread.Sheets.SheetArea.viewport);   // 배송요청서
         sheet.setValue(startRow + 1, 1, data.c8);   // 출고일자
         combo.items(time)
             .editorValueType(spreadNS.CellTypes.EditorValueType.text);
@@ -233,7 +455,8 @@ function initSpread(spread) {
             .editorValueType(spreadNS.CellTypes.EditorValueType.text);
         sheet.getCell(startRow + 1, 3, spreadNS.SheetArea.viewport).cellType(combo).value(data.c10);     // 상차담당자
         sheet.setValue(startRow + 1, 6, data.c11);   // 물류비고
-        sheet.setCellType(startRow + 1, 7, new GC.Spread.Sheets.CellTypes.Button().text("저장"), GC.Spread.Sheets.SheetArea.viewport);         // 저장
+        sheet.setCellType(startRow + 1, 7, new GC.Spread.Sheets.CellTypes.Button().text("피킹리스트"), GC.Spread.Sheets.SheetArea.viewport);         // 피킹리스트
+        sheet.setCellType(startRow + 1, 8, new GC.Spread.Sheets.CellTypes.Button().text("저장"), GC.Spread.Sheets.SheetArea.viewport);              // 저장
 
         // 병합
         sheet.addSpan(startRow, 0, 2, 1);      // 배송번호
@@ -272,6 +495,36 @@ function getData() {
     obj.c9 = getRandomArrayElement(time).text;
     obj.c10 = getRandomArrayElement(["박OO", "김OO", "이OO", "차OO"]);
     obj.c11 = getRandomArrayElement(["예정일 도착 예정입니다.", "1개 제품이 배송 중 손상되었습니다. 환불 조치하였습니다.", "긴급 전환 요청들어왔습니다."]);
+    arr.push(obj);
+  }
+
+  function getRandomDate(start, end) {
+      const startDate = start.getTime();
+      const endDate = end.getTime();
+          
+      return new Date(startDate + Math.random() * (endDate - startDate));
+  }
+
+  function getRandomArrayElement(arr) {
+      return arr[Math.floor(Math.random() * arr.length)]
+  }
+
+
+  return arr;
+}
+
+function getData2() {
+  let arr = [];
+
+  for(var i = 1; i < 30; i++) {
+    var order = getRandomArrayElement([["별도상차", "별도상차"], [getRandomArrayElement(["부01", "부02", "부03", "A01", "A02", "A03"]) + '-' + (Math.floor(Math.random() * (50 - 10)) + 10) + '-' + (Math.floor(Math.random() * (50 - 10)) + 10),"부자재"]]);
+    var obj = {};
+    obj.c1 = i;
+    obj.c2 = order[0];
+    obj.c3 = getRandomArrayElement(["FFVFDVDDF", "GDFSGDFVSD", "EWRWRW", "ASVSCXV", "AQKUTVDVDS"]) + (Math.floor(Math.random() * (5000 - 1000)) + 1000);
+    obj.c4 = getRandomArrayElement(["페스탈 일체형 PL-2120", "세면기 앙카볼트", "유리코너선반(2단)", "유리코너선반(3단)", "4품 악세사리 BP-5123 수건걸이", "4품 악세사리 BP-5123 비누대", "4품 악세사리 BP-5123 컵대"]);
+    obj.c5 = (Math.floor(Math.random() * (10 - 1)) + 1);
+    obj.c6 = order[1];
     arr.push(obj);
   }
 
