--- a/views/ejs/sample15.ejs
+++ b/views/ejs/sample15.ejs
@@ -1,5 +1,10 @@
 <div class="content_top">
     <div class="cont_tit">배송내역서 상세</div>
+    <div class="div">
+        <button id="btnGrid" class="btn_search">
+            <span>출고요청서</span>
+        </button>
+    </div>
 </div>
 
 <div class="content_box">
@@ -20,6 +25,10 @@
 <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-pdf/dist/gc.spread.sheets.pdf.min.js" type="text/javascript"></script>
 <script>
 window.onload = function() {
+    $('#btnGrid').on('click', function(e){
+        location.href = '/sample?depth1=OMS&depth2=출고요청서&sampleId=11';
+    });
+
 	// host the workbook control in a DIV element with id "ss"
 	var spread = new GC.Spread.Sheets.Workbook(document.getElementById('ss'), {
 		sheetCount: 2,
@@ -97,7 +106,8 @@ function initSpread(spread) {
         sheet.getCell(12, 6).text('비고').font('bold normal 15px normal');
 
         sheet.setRowHeight(11, 50.0, SheetArea.viewport);
-        sheet.getRange(12, 0, 1, 8).backColor('#D0CECE');
+        sheet.getRange(12, 0, 1, 8).foreColor('#ffffff');
+        sheet.getRange(12, 0, 1, 8).backColor('#36495e');
         sheet.getRange(12, 0, 1, 8).hAlign(GC.Spread.Sheets.HorizontalAlign.center);
 
         var sum = 0;
@@ -143,7 +153,8 @@ function initSpread(spread) {
         sheet.getCell(startCell2 + 1, 6).text('비고').font('bold normal 15px normal');
 
         sheet.setRowHeight(startCell2, 50.0, SheetArea.viewport);
-        sheet.getRange(startCell2 + 1, 0, 1, 8).backColor('#D0CECE');
+        sheet.getRange(startCell2 + 1, 0, 1, 8).foreColor('#ffffff');
+        sheet.getRange(startCell2 + 1, 0, 1, 8).backColor('#36495e');
         sheet.getRange(startCell2 + 1, 0, 1, 8).hAlign(GC.Spread.Sheets.HorizontalAlign.center);
 
         var sum = 0;
