--- a/views/ejs/sample15.ejs
+++ b/views/ejs/sample15.ejs
@@ -1,6 +1,9 @@
 <div class="content_top">
     <div class="cont_tit">배송내역서 상세</div>
     <div class="div">
+        <button id="btnExcel" class="btn_search">
+            <span>엑셀 다운로드</span>
+        </button>
         <button id="btnGrid" class="btn_search">
             <span>출고요청서</span>
         </button>
@@ -23,6 +26,8 @@
 <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/spread/source/js/FileSaver.js" type="text/javascript"></script>
 <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-print/dist/gc.spread.sheets.print.min.js" type="text/javascript"></script>
 <script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-pdf/dist/gc.spread.sheets.pdf.min.js" type="text/javascript"></script>
+<script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-excelio/dist/gc.spread.excelio.min.js" type="text/javascript"></script>
+<script src="https://demo.mescius.co.kr/spreadjs/learn-spreadjs/ko/purejs/node_modules/@grapecity/spread-sheets-io/dist/gc.spread.sheets.io.min.js" type="text/javascript"></script>
 <script>
 window.onload = function() {
     $('#btnGrid').on('click', function(e){
@@ -37,6 +42,26 @@ window.onload = function() {
     spread.suspendPaint();
 	initSpread(spread);
     spread.resumePaint();
+
+    document.getElementById('btnExcel').onclick = function () {
+        var fileName = '배송내역서_상세_OD2310392635.xlsx';
+        var fileType = 'xlsx';
+        var options = {
+            "includeBindingSource": false,
+            "includeStyles": true,
+            "includeFormulas": true,
+            "saveAsView": false,
+            "rowHeadersAsFrozenColumns": false,
+            "columnHeadersAsFrozenRows": false,
+            "includeAutoMergedCells": false,
+            "includeCalcModelCache": false,
+            "includeUnusedNames": true,
+            "includeEmptyRegionCells": true,
+            "fileType": 0
+        }
+
+        spread.export(function(blob) { saveAs(blob, fileName); }, function() {}, options);
+    };
 };
 
 function initSpread(spread) {
